--- a/public/.htaccess
+++ b/public/.htaccess
@@ -2,3 +2,7 @@ RewriteEngine on
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^(.*)$ /index.php [NC,L,QSA]
+<Files ".env">  
+  Order Allow,Deny
+  Deny from all
+</Files>
